comment out sass files causing build errors

--- a/docs/src/css/custom.scss
+++ b/docs/src/css/custom.scss
@@ -77,13 +77,14 @@ $fa-css-prefix: 'icon';
     @import '../../../stylesheets/component.daterange';
     @import '../../../stylesheets/component.dropdowns';
     @import '../../../stylesheets/component.editor';
+    
     @import '../../../stylesheets/component.error-summary';
     @import '../../../stylesheets/component.filterbar';
     @import '../../../stylesheets/component.flash';
-    @import '../../../stylesheets/component.footer';
+    // @import '../../../stylesheets/component.footer';
     @import '../../../stylesheets/component.forms';
     @import '../../../stylesheets/component.choice';
-    @import '../../../stylesheets/component.greeter';
+    // @import '../../../stylesheets/component.greeter';
     @import '../../../stylesheets/component.icons';
     @import '../../../stylesheets/component.input-groups';
     @import '../../../stylesheets/component.labels';
@@ -94,7 +95,7 @@ $fa-css-prefix: 'icon';
     @import '../../../stylesheets/component.message';
     @import '../../../stylesheets/component.metadata';
     @import '../../../stylesheets/component.modals';
-    @import '../../../stylesheets/component.navigation';
+    // @import '../../../stylesheets/component.navigation';
     @import '../../../stylesheets/component.nav-list';
     @import '../../../stylesheets/component.navbars';
     @import '../../../stylesheets/component.notifications';
@@ -105,13 +106,15 @@ $fa-css-prefix: 'icon';
     @import '../../../stylesheets/component.progress-bars';
     @import '../../../stylesheets/component.progress-lists';
     @import '../../../stylesheets/component.range-slider';
+    
     @import '../../../stylesheets/component.remove-button';
     @import '../../../stylesheets/component.ribbon';
     @import '../../../stylesheets/component.rules';
     @import '../../../stylesheets/component.search';
     @import '../../../stylesheets/component.select2';
     @import '../../../stylesheets/component.settings';
-    @import '../../../stylesheets/component.signin';
+    // @import '../../../stylesheets/component.signin';
+    
     @import '../../../stylesheets/component.slider';
     @import '../../../stylesheets/component.status';
     @import '../../../stylesheets/component.tab-help';
