Switch actions button to be outline button

--- a/stylesheets/_component.button-groups.scss
+++ b/stylesheets/_component.button-groups.scss
@@ -23,6 +23,7 @@
 
         // Restore expected borders for solo outline buttons only
         &.btn--outline:only-of-type {
+            border-right-color: inherit;
             border-right-width: 1px;
         }
 
