Fix compilation error in actions menu helper

--- a/stylesheets/_component.button-groups.scss
+++ b/stylesheets/_component.button-groups.scss
@@ -34,8 +34,8 @@
     }
 }
 
-.dropdown .btn,
-.dropup .btn {
-    border-right-width: 0;
-    border-radius: $btn-border-radius;
-}
+// .dropdown .btn,
+// .dropup .btn {
+//     border-right-width: 0;
+//     border-radius: $btn-border-radius;
+// }
