Add offset underline and thicker hover effect on links

--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -40,9 +40,11 @@ body {
 a {
   color: color(link);
   cursor: pointer;
+  text-underline-offset: 2px;
 
   &:hover {
     color: color(link, hover);
+    text-decoration-thickness: 2px;
   }
 
   &:focus {
