Refine table action link styles

--- a/stylesheets/_component.notifications.scss
+++ b/stylesheets/_component.notifications.scss
@@ -48,6 +48,12 @@
         display: none;
     }
 
+    // Disable default button is-active styles
+    &.is-active {
+        background-color: initial;
+        color: initial;
+    }
+
     // the red dot indicator
     &.has-new::before {
         background-color: color(danger);
