--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -69,11 +69,14 @@
         &:last-of-type {
             margin-right: 0;
         }
+
+        &:hover {
+            background-color: color(grey, off-white);
+        }
     }
 
     &__item.is-active {
-        border-bottom: 4px solid $nav-color-light;
-        margin-bottom: -1px;
+        box-shadow: inset 0 -4px 0 0 $nav-color-light;
     }
 
     &__item.is-active > &__link {
