--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -40,6 +40,7 @@ body {
 a {
   color: color(link);
   cursor: pointer;
+  text-decoration: underline;
   text-underline-offset: 2px;
 
   &:hover {
