Finish adding patterns documentation

--- a/docs/src/css/custom.scss
+++ b/docs/src/css/custom.scss
@@ -180,6 +180,10 @@ $fa-css-prefix: 'icon';
     padding: 1em;
     width: 100%;
 
+    h1, h2, h3, h4, h5, h6 {
+        color: unset;
+    }
+
     ul, ol {
         padding-left: 0;
     }
