--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -41,7 +41,7 @@ body {
     background-repeat: no-repeat;
     display: inline-block;
     text-align: center;
-    height: $branding-navigation-height;
+    height: 48px;
     width: $branding-navigation-width;
 }
 
