--- a/stylesheets/_config.branding.scss
+++ b/stylesheets/_config.branding.scss
@@ -13,11 +13,11 @@ $branding-site-height:                65px;
 $branding-site-width:                 65px;
 $branding-site-radius:                0;
 
-$branding-navigation:                 $image-path + 'branding/logo-cms-white.svg' !default;
+$branding-navigation:                 $image-path + 'branding/jadu-connect-test.svg' !default;
 $branding-navigation-focus:           $image-path + 'branding/logo-cms-black.svg' !default;
 $branding-navigation-fallback:        $image-path + 'branding/logo-cms-white.png' !default;
-$branding-navigation-height:          50px !default;
-$branding-navigation-width:           50px !default;
+$branding-navigation-height:          55px !default;
+$branding-navigation-width:           65px !default;
 
 $branding-footer:                     $image-path + 'branding/jadu-continuum-brandmark.svg' !default;
 $branding-footer-fallback:            $image-path + 'branding/jadu-continuum-brandmark.png' !default;
