--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -228,6 +228,7 @@
 
 .nav-primary {
     background-color: $nav-color-light;
+    background: linear-gradient(137deg, rgba(62, 73, 158, 1) 0%, rgba(52, 53, 107, 1) 60%, rgba(204, 44, 131, 1) 100%);
     box-shadow: inset 0 0 0 $nav-color-dark;
     overflow-y: hidden;
     text-align: center;
@@ -330,6 +331,7 @@
 .nav-tertiary,
 .nav-quaternary {
     background-color: $nav-color-dark;
+    background: linear-gradient(137deg, rgba(62, 73, 158, 1) 0%, rgba(52, 53, 107, 1) 60%, rgba(204, 44, 131, 1) 100%);
     box-shadow: inset -4px 0 0 darken($nav-color-dark, 4);
     left: $nav-primary-width;
     margin-left: -320px;
