--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -12,7 +12,8 @@ body {
 
 // prevent white flash before video plugin is initialised
 .signin-backdrop {
-	background-color: color(black);
+	background: rgb(62, 73, 158);
+	background: linear-gradient(137deg, rgba(62, 73, 158, 1) 0%, rgba(52, 53, 107, 1) 50%, rgba(204, 44, 131, 1) 100%);
 	bottom: 0;
 	left: 0;
 	position: absolute;
@@ -54,7 +55,7 @@ body {
 	background-color: $signin-bg-color;
 	border-radius: 2px;
 	box-shadow: 0 0 50px color(black);
-	color: color(white);
+	color: color(text);
 	margin: 0 auto;
 	min-height: 350px;
 	padding: 0 0 10px;
@@ -94,7 +95,7 @@ body {
 	button {
 		&:focus {
 			outline: none;
-			box-shadow: 0 0 5px black;
+			// box-shadow: 0 0 5px black;
 		}
 	}
 
@@ -104,13 +105,14 @@ body {
 	}
 
 	a {
-		color: color(white);
+		color: color(text, link);
 	}
 
 	.btn {
 		background: none;
-		border: 2px solid white;
+		border: 2px solid rgb(62, 73, 158);
 		box-shadow: none;
+		color: rgb(62, 73, 158);
 
 		&:hover,
 		&:focus {
@@ -215,7 +217,7 @@ body {
 
 .signin__input {
 	background-color: none;
-	border: 0;
+	border: 2px solid rgb(62, 73, 158);
 	box-shadow: inset 0 3px 0 #efefef;
 	border-radius: 2px;
 	display: inline-block;
@@ -336,13 +338,14 @@ body {
 
 .signin__icon {
 	background: url($branding-site-fallback);
-	background: url($branding-site), linear-gradient(transparent, transparent);
+	background: linear-gradient(137deg, rgba(62, 73, 158, 1) 0%, rgba(52, 53, 107, 1) 50%, rgba(204, 44, 131, 1) 100%);
 	background-size: $branding-site-height $branding-site-width;
 	background-position: 50% 0;
 	background-repeat: no-repeat;
 	border-radius: $branding-site-radius;
 	display: inline-block;
 	margin: 20px auto 0;
+	mask: url($branding-site);
 	text-align: center;
 	height: $branding-site-height;
 	width: $branding-site-width;
