--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -229,7 +229,7 @@
 .nav-primary {
     background-color: $nav-color-light;
     background: linear-gradient(137deg, rgba(62, 73, 158, 1) 0%, rgba(52, 53, 107, 1) 60%, rgba(204, 44, 131, 1) 100%);
-    box-shadow: inset 0 0 0 $nav-color-dark;
+    box-shadow: inset 0 0 0 rgba(0, 0, 0, .2);
     overflow-y: hidden;
     text-align: center;
     transition: box-shadow 100ms linear;
@@ -241,11 +241,11 @@
     }
 
     .is-active {
-        background-color: $nav-color-dark;
+        background-color: rgba(255, 255, 255, .2);
     }
 
     .nav-main:not(.is-open) & {
-        box-shadow: inset -4px 0 0 $nav-color-dark;
+        box-shadow: inset -4px 0 0 rgba(0, 0, 0, .2);
     }
 
     .nav-link {
@@ -265,7 +265,7 @@
         transition: background-color 50ms linear, color 50ms linear, box-shadow 50ms linear, outline 50ms linear;
 
         &:hover {
-            background-color: darken($nav-color-dark, 2%);
+            background-color: rgba(255, 255, 255, .2);
             color: color(white);
         }
 
@@ -281,7 +281,7 @@
     .nav-link__icon {
         color: color(white);
         display: block;
-        font-size: 2em;
+        font-size: 1.7em;
         margin-bottom: 7px;
         width: 100%;
     }
@@ -331,7 +331,6 @@
 .nav-tertiary,
 .nav-quaternary {
     background-color: $nav-color-dark;
-    background: linear-gradient(137deg, rgba(62, 73, 158, 1) 0%, rgba(52, 53, 107, 1) 60%, rgba(204, 44, 131, 1) 100%);
     box-shadow: inset -4px 0 0 darken($nav-color-dark, 4);
     left: $nav-primary-width;
     margin-left: -320px;
