Experimentation with sign in UI

--- a/views/playground/login/index.html.twig
+++ b/views/playground/login/index.html.twig
@@ -12,7 +12,7 @@
   <img src="../../../../images/video/galaxy.jpg" alt="galaxy background">
 </div>
 <!--<![endif]-->
-<div class="video" id="video-bg" data-video-bg="../../../../images/video/galaxy.mp4" data-video-poster="../../../../images/video/galaxy.jpg">
+<div class="signin-backdrop">
 	<h1 class="signin-brand"><img src="../../../../images/branding/continuum-brandmark.svg" alt="Continuum Brandmark" /></h1>
 
 	<div class="signin-container">
@@ -22,7 +22,7 @@
 				<form id="signin" class="signin__panel signin-form" aria-hidden="false">
 					<div class="signin__icon t-signin-icon"></div>
 
-					<span class="signin__info" role="alert" aria-atomic="true">Pulsar</span>
+					<span class="signin__info" role="alert" aria-atomic="true">Pulsar City Council</span>
 
 					<div class="signin__group">
 						<label for="username">Username (required)</label>
