--- a/views/lexicon/forms/all.html.twig
+++ b/views/lexicon/forms/all.html.twig
@@ -10,6 +10,8 @@
         form.text({
             'id': 'guid-' ~ random(),
             'label': 'Text',
+            'maxlength': 100,
+            'data-maxlength': true
         })
     }}
 
