--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -13,7 +13,6 @@ fieldset {
 
         legend {
             border-bottom: 1px solid color(border);
-            color: color(text);
             display: block;
             font-size: $font-size-xlarge;
             line-height: $line-height-base;
@@ -285,6 +284,8 @@ fieldset {
 }
 
 .legend {
+    color: color(jadu-purple);
+    font-family: $font-family-heading-light;
     font-size: $font-size-large;
     margin-bottom: .5em;
 }
