--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -228,7 +228,7 @@
 
 .nav-primary {
     background-color: $nav-color-light;
-    background: linear-gradient(137deg, rgba(62, 73, 158, 1) 0%, rgba(52, 53, 107, 1) 60%, rgba(204, 44, 131, 1) 100%);
+    background: $background-gradient;
     box-shadow: inset 0 0 0 rgba(0, 0, 0, .2);
     overflow-y: hidden;
     text-align: center;
@@ -331,7 +331,8 @@
 .nav-tertiary,
 .nav-quaternary {
     background-color: $nav-color-dark;
-    box-shadow: inset -4px 0 0 darken($nav-color-dark, 4);
+    background: $background-gradient;
+    box-shadow: 4px 0 4px rgba(0, 0, 0, .2), inset 4px 0 0 rgb(0, 0, 0, .2);
     left: $nav-primary-width;
     margin-left: -320px;
     overflow-x: hidden;
