--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -16,6 +16,8 @@ $font-family-regular:                 'proxima_nova_rgregular', 'Helvetica Neue'
 $font-family-fallback:                'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
 $font-family-monospace:               'Courier New', 'Andale Mono', 'Consolas', monospace !default;
 
+$background-gradient:                 linear-gradient(190deg, #3e499e 0, #34356A 60%, #cc2c83 100%);
+
 // -----------------------------------------------------------------------------
 //  Typographic grid
 // -----------------------------------------------------------------------------
@@ -120,7 +122,6 @@ $padding-large-vertical:              10px !default;
 $padding-large-horizontal:            16px !default;
 $padding-small-vertical:              5px !default;
 $padding-small-horizontal:            10px !default;
-
 
 $padding-small-em:                    .5em !default;
 $padding-micro-em:                    .2em !default;
