--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -16,7 +16,7 @@ $font-family-regular:                 'proxima_nova_rgregular', 'Helvetica Neue'
 $font-family-fallback:                'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
 $font-family-monospace:               'Courier New', 'Andale Mono', 'Consolas', monospace !default;
 
-$background-gradient:                 linear-gradient(190deg, #3e499e 0, #34356A 60%, #cc2c83 100%);
+$background-gradient:                 linear-gradient(190deg, #3e499e 0, #34356a 60%, #cc2c83 100%);
 
 // -----------------------------------------------------------------------------
 //  Typographic grid
