--- a/stylesheets/_component.error-summary.scss
+++ b/stylesheets/_component.error-summary.scss
@@ -12,7 +12,10 @@
 }
 
 .error-summary__title {
+    font-family: $font-family-heading-light;
+    font-weight: normal;
     margin-bottom: $margin-base * 1.5;
+    text-transform: uppercase;
 }
 
 .error-summary__list {
