--- a/stylesheets/_config.theme.scss
+++ b/stylesheets/_config.theme.scss
@@ -58,9 +58,9 @@ $badge-link-hover-color:        #fff !default;
 // -----------------------------------------------------------------------------
 
 $dropdown-bg:                    #fff !default;
-$dropdown-border:                color(gray, light) !default;
-$dropdown-fallback-border:       color(gray) !default;
-$dropdown-divider-bg:            color(gray, light) !default;
+$dropdown-border:                color(black) !default;
+$dropdown-fallback-border:       color(black) !default;
+$dropdown-divider-bg:            color(black) !default;
 $dropdown-link-active-color:     #fff !default;
 $dropdown-link-active-bg:        color(primary) !default;
 $dropdown-link-color:            color(gray, dark) !default;
