--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -98,6 +98,13 @@ $border-radius:                       4px !default;
 $border-radius-large:                 20px !default;
 
 // -----------------------------------------------------------------------------
+//  Shadows
+// -----------------------------------------------------------------------------
+
+$shadow-large:                        12px;
+$shadow-small:                        6px;
+
+// -----------------------------------------------------------------------------
 //  Dropdowns
 // -----------------------------------------------------------------------------
 
