--- a/views/lexicon/forms/all.html.twig
+++ b/views/lexicon/forms/all.html.twig
@@ -10,8 +10,9 @@
         form.text({
             'id': 'guid-' ~ random(),
             'label': 'Text',
-            'maxlength': 100,
-            'data-maxlength': true
+            'maxlength': 20,
+            'data-maxlength': true,
+            'help': 'This is another help block'
         })
     }}
 
