--- a/views/lexicon/patterns/disabled-ui/disabled-ui.html.twig
+++ b/views/lexicon/patterns/disabled-ui/disabled-ui.html.twig
@@ -72,7 +72,7 @@
 {% endblock tab_content %}
 
 {% block tab_sidebar %}
-    <h2 class="heading margin-bottom">{{ html.icon('info-sign', { 'class': 'sidebar-icon'}) }} Disabling a UI</h2>
+    <h2 class="heading margin-bottom">Disabling a UI</h2>
 
     <p>You can disable parts of or a whole UI by adding data-disable-u="true" to an element. You should inform the user why the UI has been disabled and what actions need to be taken to enable it</p>
 {% endblock tab_sidebar %}
