--- a/views/lexicon/patterns/rules/event-based.html.twig
+++ b/views/lexicon/patterns/rules/event-based.html.twig
@@ -384,7 +384,7 @@
 {% endblock tab_content %}
 
 {% block tab_sidebar %}
-    <h2>{{ html.icon('info-sign') }} Create powerful event-driven rules</h2>
+    <h2> Create powerful event-driven rules</h2>
     <p>Create rules to automatically perform actions when specific events occur.</p>
     <p>Rules can do things like send emails, or make changes to integrated third-party systems too.</p>
 {% endblock tab_sidebar %}
