--- a/views/lexicon/patterns/rules/logic-based.html.twig
+++ b/views/lexicon/patterns/rules/logic-based.html.twig
@@ -607,6 +607,6 @@
 {% endblock tab_content %}
 
 {% block tab_sidebar %}
-    <h2>{{ html.icon('info-sign') }} Create powerful logic-based rules</h2>
+    <h2> Create powerful logic-based rules</h2>
     <p>Create formulae to calculate numeric and textual values</p>
 {% endblock tab_sidebar %}
