--- a/views/lexicon/tabs/block-list.html.twig
+++ b/views/lexicon/tabs/block-list.html.twig
@@ -1,7 +1,7 @@
 {% extends "@pulsar/pulsar/components/tab.html.twig" %}
 
 {% block tab_sidebar %}
-    <h2 class="heading">{{ html.icon('info-sign', { 'class': 'sidebar-icon'}) }} Block Lists</h2>
+    <h2 class="heading">Block Lists</h2>
 
      <p>A simple way to present lists of information which can be marked up using
      <code>&lt;div&gt; &lt;ul&gt;</code> or <code>&lt;ol&gt;</code>.</p>
