--- a/views/lexicon/tabs/grid.html.twig
+++ b/views/lexicon/tabs/grid.html.twig
@@ -97,7 +97,7 @@
 {% block tab_sidebar %}
 
 
-    <h2 class="heading">{{ html.icon('info-sign', { 'class': 'sidebar-icon'}) }} Using colour</h2>
+    <h2 class="heading">Using colour</h2>
 
     <p>Pulsar uses a standardised colour palette which incorporates the colours defined in Jadu’s styleguide.</p>
 
