--- a/views/lexicon/utilities/responsive.html.twig
+++ b/views/lexicon/utilities/responsive.html.twig
@@ -49,7 +49,7 @@
 {% endblock %}
 
 {% block tab_sidebar %}
-    <h2 class="heading">{{ html.icon('info-sign', { 'class': 'sidebar-icon'}) }} Responsive utilities</h2>
+    <h2 class="heading">Responsive utilities</h2>
     <p>Resize browser window to see which elements are hidden and shown at different breakpoints.</p>
     <table class="table table--full" tabindex="0">
         <thead>
