--- a/views/playground/galaxies/admins.html.twig
+++ b/views/playground/galaxies/admins.html.twig
@@ -349,7 +349,7 @@
 {% endblock tab_content %}
 
 {% block tab_sidebar %}
-    <h2>{{ html.icon('info-sign') }} Galaxies administrators</h2>
+    <h2> Galaxies administrators</h2>
     <p>Control who has access to your Galaxies control centre by adding administrators from your existing Continuum CMS admins.</p>
     <p>If you're implementing a translation workflow you will need to add the Administrators who have been configured as translators for the same locale as this Galaxies site. Read more about [translation workflows] in the Galaxies user guide.</p>
 {% endblock tab_sidebar %}
