--- a/views/playground/galaxies/security.html.twig
+++ b/views/playground/galaxies/security.html.twig
@@ -204,7 +204,7 @@
 {% endblock tab_content %}
 
 {% block tab_sidebar %}
-    <h2>{{ html.icon('info-sign') }} Protect your visitors</h2>
+    <h2> Protect your visitors</h2>
     <p>Create secure Galaxies sites and require authorised visitors to sign in first.</p>
     <p>Use SSL security to encrypt traffic to and from your site, protecting data in transit.</p>
 {% endblock tab_sidebar %}
