--- a/views/playground/galaxies/settings.html.twig
+++ b/views/playground/galaxies/settings.html.twig
@@ -195,7 +195,7 @@
 {% endblock tab_content %}
 
 {% block tab_sidebar %}
-    <h2>{{ html.icon('info-sign') }} Galaxies, your site factory</h2>
+    <h2> Galaxies, your site factory</h2>
     <p>A galaxies site is a self-contained website with its own control centre and allows you to create separate sites for events, venues or even your entire institution.</p>
 
     <p>Using Galaxies turns your Continuum CMS into a multi-tenant content management platform. To unlock the true potential of Galaxies see our <a href="#">online guides</a> or request information about our next <a href="#">Galaxies Designer Training Course</a>.</p>
