--- a/views/playground/installation/tabs/details.html.twig
+++ b/views/playground/installation/tabs/details.html.twig
@@ -66,7 +66,7 @@
 {% endblock tab_content %}
 
 {% block tab_sidebar %}
-    <h2 class="heading">{{ html.icon('info-sign', { 'class': 'sidebar-icon'}) }} Help search engines know about your site</h2>
+    <h2 class="heading">Help search engines know about your site</h2>
 
     <p>The site name and description is used by search engines when displaying your site in their search results.</p>
 
