--- a/views/playground/installation/tabs/metadata.html.twig
+++ b/views/playground/installation/tabs/metadata.html.twig
@@ -64,7 +64,7 @@
 {% endblock tab_content %}
 
 {% block tab_sidebar %}
-    <h2 class="heading">{{ html.icon('info-sign', { 'class': 'sidebar-icon'}) }} Tell machines about your content</h2>
+    <h2 class="heading">Tell machines about your content</h2>
 
     <p>Metadata is used by search engines and other programs and helps them to learn more about your website and its content.</p>
 
