--- a/views/playground/xfp-received/log.html.twig
+++ b/views/playground/xfp-received/log.html.twig
@@ -45,7 +45,7 @@
 
 {% endblock tab_content %}
 {% block tab_sidebar %}
-    <h2>{{ html.icon('info-sign') }} Form actions and activity</h2>
+    <h2> Form actions and activity</h2>
     <p>This log shows the actions performed by the user while progressing through the form and any actions performed by integrated systems.</p>
 
 {% endblock tab_sidebar %}
