--- a/stylesheets/_component.dropdowns.scss
+++ b/stylesheets/_component.dropdowns.scss
@@ -25,6 +25,18 @@
   position: relative;
 }
 
+// Make sure transparent trigger buttons sit over dropdown shadow
+.dropdown.open > .btn--outline {
+  background-color: color(primary);
+  border: 1px solid color(primary);
+  color: color(primary, alt);
+  z-index: $zindex-dropdown + 1;
+
+  .caret {
+    border-top-color: color(primary, alt);
+  }
+}
+
 // The dropdown menu (ul)
 // ----------------------
 .dropdown__menu {
@@ -34,16 +46,16 @@
   z-index: $zindex-dropdown;
   display: none; // none by default, but block on "open" of the menu
   float: left;
-  font-size: $dropdown-font-size;
   min-width: 160px;
   padding: 5px 0;
-  margin: 0; // override default ul
+  margin: $shadow-small 0 0; // override default ul
   list-style: none;
   background-color: $dropdown-bg;
   border: 1px solid $dropdown-fallback-border; // IE8 fallback
   border: 1px solid $dropdown-border;
   // border-radius: $border-radius;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+  // box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+  box-shadow: 0 0 0 $shadow-small rgba(0, 0, 0, .2);
   background-clip: padding-box;
 
   // Aligns the dropdown menu to right
@@ -80,7 +92,7 @@
     display: block;
     font-weight: normal;
     line-height: $line-height-base;
-    padding: 3px 15px 3px 10px;
+    padding: 4px 15px 2px 5px;
     text-align: left;
     text-decoration: none;
     white-space: nowrap; // prevent links from randomly breaking onto new lines
@@ -172,7 +184,7 @@
 .dropdown-header {
   display: block;
   padding: 3px 20px;
-  font-size: $font-size-small;
+  // font-size: $font-size-small;
   line-height: $line-height-base;
   color: color(gray, light);
 }
