--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -80,8 +80,7 @@
 .select2-dropdown {
     background-color: white;
     border: 1px solid $input-border;
-    border-radius: 4px;
-    box-shadow: 0 5px 10px rgba(0,0,0,.4);
+    box-shadow: 0 0 0 $shadow-small rgba(0, 0, 0, .2);
     box-sizing: border-box;
     display: block;
     position: absolute;
