--- a/views/lexicon/patterns/masterswitch/masterswitch-enabled.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-enabled.html.twig
@@ -89,7 +89,7 @@
 {% endblock tab_content %}
 
 {% block tab_sidebar %}
-    <h2 class="heading">{{ html.icon('info-sign', { 'class': 'sidebar-icon'}) }} Disabling a UI</h2>
+    <h2 class="heading">Disabling a UI</h2>
 
     <p>Disable an entire UI until the main masterswitch is turned on. You should make sure that turning the masterswitch off disables the functionality contained with the rest of the UI.</p>
 {% endblock tab_sidebar %}
