--- a/views/lexicon/patterns/table-detail/table-detail.html.twig
+++ b/views/lexicon/patterns/table-detail/table-detail.html.twig
@@ -1,7 +1,7 @@
 {% extends "@pulsar/pulsar/components/tab.html.twig" %}
 
 {% block tab_sidebar %}
-    <h2 class="heading">{{ html.icon('info-sign', { 'class': 'sidebar-icon'}) }} Example help</h2>
+    <h2 class="heading">Example help</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tellus dolor, condimentum efficitur arcu sed, feugiat pellentesque lacus. Pellentesque ac ipsum ac mauris cursus volutpat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 {% endblock tab_sidebar %}
 
