--- a/views/lexicon/tabs/buttons_labels.html.twig
+++ b/views/lexicon/tabs/buttons_labels.html.twig
@@ -5,14 +5,22 @@
 
 {% block tab_sidebar %}
 
-    <h2 class="heading">{{ html.icon('info-sign', { 'class': 'sidebar-icon'}) }} Some button help</h2>
+    <h2 class="heading">Some button help</h2>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tellus dolor, condimentum efficitur arcu sed, feugiat pellentesque lacus. Pellentesque ac ipsum ac mauris cursus volutpat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 {% endblock tab_sidebar %}
 
 
 {% block tab_content %}
-
+{{
+        form.text({
+            'id': 'guid-' ~ random(),
+            'label': 'Text',
+            'maxlength': 20,
+            'data-maxlength': true,
+            'help': 'This is another help block'
+        })
+    }}
     <h2 class="heading">Links & Lists</h2>
     <p>
         <a href="#">Normal</a> / <a href="#" class="is-disabled">Disabled</a>
