--- a/stylesheets/_component.table-detail.scss
+++ b/stylesheets/_component.table-detail.scss
@@ -3,6 +3,7 @@
     background: color(white);
     border-left: 1px solid $modal-header-border-color;
     bottom: 0;
+    box-shadow: 0 0 0 $shadow-large rgba(0, 0, 0, .2);
     display: none;
     height: 100%;
     overflow-x: none;
@@ -74,20 +75,21 @@
 }
 
 .table-detail-backdrop {
-    background: $modal-backdrop-bg;
+    background-color: transparent;
     height: 0;
-    opacity: 0;
     position: fixed;
     right: 0;
     top: 0;
-    transition: opacity .5s, width .1s .5s, height .1s .5s;
+    transition: background-color .5s, width .1s .5s, height .1s .5s;
     width: 0;
     z-index: ($zindex-modal - 10);
 
     &.in {
         height: 100%;
-        opacity: .5;
-        transition: opacity .2s;
+        -webkit-backdrop-filter: blur(2px);
+        backdrop-filter: blur(2px);
+        background-color: rgba(0, 0, 0, .5);
+        transition: background-color .5s;
         width: 100%;
     }
 }
