Make shadows and backdrops slightly purple

--- a/stylesheets/_component.calendar.scss
+++ b/stylesheets/_component.calendar.scss
@@ -9,7 +9,7 @@
 }
 
 .pulsar-datepicker.ui-datepicker {
-    box-shadow: 0 0 0 $shadow-small rgba(0, 0, 0, .2);
+    box-shadow: 0 0 0 $shadow-small color(background, shadow);
 }
 
 .ui-datepicker-calendar {
