--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -80,7 +80,7 @@
 .select2-dropdown {
     background-color: white;
     border: 1px solid $input-border;
-    box-shadow: 0 0 0 $shadow-small rgba(0, 0, 0, .2);
+    box-shadow: 0 0 0 $shadow-small color(background, shadow);
     box-sizing: border-box;
     display: block;
     position: absolute;
