--- a/stylesheets/_structure.type.scss
+++ b/stylesheets/_structure.type.scss
@@ -18,6 +18,8 @@ h3,
 h4,
 h5,
 h6 {
+    font-family: $font-family-heading-light;
+    font-weight: normal;
     line-height: 1em;
     margin: 0 0 1em;
 }
