--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -229,7 +229,8 @@
 .nav-primary {
     background-color: $nav-color-light;
     background: $background-gradient;
-    box-shadow: inset 0 0 0 rgba(0, 0, 0, .2);
+    background-attachment: fixed;
+    box-shadow: inset (-$shadow-micro) 0 0 rgba(0, 0, 0, .2);
     overflow-y: hidden;
     text-align: center;
     transition: box-shadow 100ms linear;
@@ -245,7 +246,7 @@
     }
 
     .nav-main:not(.is-open) & {
-        box-shadow: inset (-$shadow-small) 0 0 rgba(0, 0, 0, .2);
+        // box-shadow: inset (-$shadow-micro) 0 0 rgba(0, 0, 0, .2);
     }
 
     .nav-link {
@@ -332,7 +333,8 @@
 .nav-quaternary {
     background-color: $nav-color-dark;
     background: $background-gradient;
-    box-shadow: $shadow-large 0 0 rgba(0, 0, 0, .2), inset $shadow-small 0 0 rgba(0, 0, 0, .2);
+    background-attachment: fixed;
+    box-shadow: $shadow-large 0 0 color(background, shadow);
     left: $nav-primary-width;
     margin-left: -320px;
     overflow-x: hidden;
