--- a/stylesheets/_component.popovers.scss
+++ b/stylesheets/_component.popovers.scss
@@ -16,7 +16,7 @@
   -webkit-bg-clip: padding-box;
      -moz-bg-clip: padding;
   background-clip: padding-box;
-  box-shadow: 0 0 0 $shadow-small rgba(0, 0, 0, .2);
+  box-shadow: 0 0 0 $shadow-small color(background, shadow);
 
   // Overrides for proper insertion
   white-space: normal;
