--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -103,6 +103,7 @@ $border-radius-large:                 20px !default;
 
 $shadow-large:                        12px;
 $shadow-small:                        6px;
+$shadow-micro:                        3px;
 
 // -----------------------------------------------------------------------------
 //  Dropdowns
