--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -1,6 +1,6 @@
 .content-main {
     display: 2px dashed red;
-    background-color: color(gray, off-white);
+    background-color: #ebe7ee;
     display: table;
     min-height: 100%;
     padding: 0 $gutter-width;
