--- a/stylesheets/_palette.base.scss
+++ b/stylesheets/_palette.base.scss
@@ -187,7 +187,7 @@ $palette-alias: (
         base:      map-get(map-get($palette-monochromes, gray), off-white),
         dark:      map-get(map-get($palette-monochromes, gray), lightest),
         light:     lighten(map-get(map-get($palette-monochromes, gray), off-white), 2.1),
-        selected:  map-get(map-get($palette-states, info), light),
+        selected:  rgba(62, 73, 148, .2),
         focus:     #fd0,
         shadow:    rgba(62, 73, 148, .3)
     ),
