--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -140,7 +140,7 @@
 
     td .status--icon {
         font-size: 1.25em;
-        vertical-align: middle;
+        vertical-align: text-bottom;
     }
 
     td.table__actions {
