--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -91,7 +91,7 @@ data-* | string | Data attributes, eg: `'data-foo': 'bar'`
                 html.badge({
                     'label': '0',
                     'aria-label': '0 rows selected',
-                    'class': 'label--primary js-bulk-actions-badge',
+                    'class': 'badge--primary js-bulk-actions-badge',
                     'style': 'display: none;'
                 }),
             'class': items.class|default() ~ ' btn--outline',
