--- a/views/playground/login/index.html.twig
+++ b/views/playground/login/index.html.twig
@@ -13,7 +13,7 @@
 </div>
 <!--<![endif]-->
 <div class="signin-backdrop">
-	<h1 class="signin-brand"><img src="../../../../images/branding/continuum-brandmark.svg" alt="Continuum Brandmark" /></h1>
+	<h1 class="signin-brand"><img src="../../../../images/branding/central-wordmark.svg" alt="Jadu Central" /></h1>
 
 	<div class="signin-container">
 
