--- a/stylesheets/_component.colorpicker.scss
+++ b/stylesheets/_component.colorpicker.scss
@@ -31,7 +31,7 @@
 
     .sp-preview {
         border: 0;
-        border-radius: 4px;
+        border-radius: $border-radius;
         bottom: 1px;
         // height: 32px;
         left: 1px;
@@ -123,7 +123,7 @@
         -webkit-appearance: none;
         background: transparent;
         border: 0;
-        border-radius: 4px;
+        border-radius: $border-radius;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         color: inherit;
