--- a/stylesheets/_component.footer.scss
+++ b/stylesheets/_component.footer.scss
@@ -1,4 +1,5 @@
 .footer {
+    display: none;
     -ms-transform: none;
     -webkit-backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
