--- a/stylesheets/_component.input-groups.scss
+++ b/stylesheets/_component.input-groups.scss
@@ -108,8 +108,9 @@
 // Text input groups
 // -------------------------
 .input-group-btn .btn {
+    border: 1px solid color(base);
     font-size: $font-size-base;
-    line-height: $input-height-base - 2;
+    line-height: $input-height-base - 1;
     margin-top: -1px;
     padding-bottom: 0;
     padding-top: 0;
