--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -181,10 +181,10 @@
 .mobile-menu-button {
     background-color: color(white);
     border: 1px solid $nav-color-dark;
-    border-radius: 4px;
+    border-radius: $border-radius;
     color: $nav-color-dark;
     display: inline-block;
-    height: 32px;
+    height: 38px;
     line-height: normal;
     margin-bottom: 10px;
     margin-right: 5px;
@@ -472,7 +472,7 @@
 .nav-search__field {
     background-color: #fff;
     border: 1px solid #d7d7d7;
-    border-radius: 4px;
+    border-radius: $border-radius;
     color: #555;
     padding: 8.5px;
     width: 192px;
