--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -176,7 +176,7 @@
 .select2-container--default .select2-selection--single {
     background-color: #fafafa;
     border: 1px solid $input-border;
-    border-radius: 4px;
+    border-radius: $border-radius;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
@@ -241,7 +241,7 @@
 .select2-container--default .select2-selection--multiple {
     background-color: #fafafa;
     border: 1px solid $input-border;
-    border-radius: 4px;
+    border-radius: $border-radius;
     cursor: text;
 }
 
@@ -460,7 +460,7 @@
 .select2-container--classic .select2-selection--single {
     background-color: #f7f7f7;
     border: 1px solid $input-border;
-    border-radius: 4px;
+    border-radius: $border-radius;
     outline: 0;
     background-image: -webkit-linear-gradient(top, white 50%, #eee 100%);
     background-image: -o-linear-gradient(top, white 50%, #eee 100%);
@@ -573,7 +573,7 @@
 .select2-container--classic .select2-selection--multiple {
     background-color: white;
     border: 1px solid $input-border;
-    border-radius: 4px;
+    border-radius: $border-radius;
     cursor: text;
     outline: 0;
 }
@@ -595,7 +595,7 @@
 .select2-container--classic .select2-selection--multiple .select2-selection__choice {
     background-color: #e4e4e4;
     border: 1px solid $input-border;
-    border-radius: 4px;
+    border-radius: $border-radius;
     cursor: default;
     float: left;
     margin-right: 5px;
