--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -42,8 +42,9 @@ body {
 	background-size: $branding-navigation-width $branding-navigation-height;
 	background-repeat: no-repeat;
 	display: inline-block;
+	margin-top: 5px;
 	text-align: center;
-	height: 48px;
+	height: 100px;
 	width: $branding-navigation-width;
 }
 
@@ -338,15 +339,13 @@ body {
 }
 
 .signin__icon {
-	background: linear-gradient(137deg, rgba(62, 73, 158, 1) 0%, rgba(52, 53, 107, 1) 50%, rgba(204, 44, 131, 1) 100%);
-	background-image: url($branding-site-fallback);
-	background-size: $branding-site-height $branding-site-width;
+	background-image: url($branding-site);
+	background-size: $branding-site-height;
 	background-position: 50% 0;
 	background-repeat: no-repeat;
 	border-radius: $branding-site-radius;
 	display: inline-block;
 	margin: 20px auto 0;
-	mask: url($branding-site);
 	text-align: center;
 	height: $branding-site-height;
 	width: $branding-site-width;
