--- a/stylesheets/_component.timeline.scss
+++ b/stylesheets/_component.timeline.scss
@@ -222,7 +222,7 @@
     }
 
     &__thumbnail-link {
-        border-radius: 4px;
+        border-radius: $border-radius;
         cursor: pointer;
         display: inline-block;
         max-height: 250px;
