--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -16,7 +16,8 @@ $font-family-regular:                 'proxima_nova_rgregular', 'Helvetica Neue'
 $font-family-fallback:                'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
 $font-family-monospace:               'Courier New', 'Andale Mono', 'Consolas', monospace !default;
 
-$background-gradient:                 linear-gradient(190deg, #3e499e 0, #34356a 60%, #cc2c83 100%);
+// $background-gradient:                 linear-gradient(190deg, #3e499e 0, #34356a 60%, #cc2c83 100%);
+$background-gradient:                 linear-gradient(190deg, #161a37 0, #3d4696 60%, #cc2c83 100%);
 
 // -----------------------------------------------------------------------------
 //  Typographic grid
@@ -94,7 +95,8 @@ $btn-border-radius: 0; // Just experimenting with 0 border for a while...
 // -----------------------------------------------------------------------------
 
 $border-width:                        1px !default;
-$border-radius:                       4px !default;
+$border-radius:                       0 !default;
+$border-radius-small:                 4px !default;
 $border-radius-large:                 20px !default;
 
 // -----------------------------------------------------------------------------
