--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -55,8 +55,7 @@ body {
 .signin {
 	background-color: $signin-bg-color-fallback;
 	background-color: $signin-bg-color;
-	border-radius: 2px;
-	box-shadow: 0 0 50px color(black);
+	box-shadow: 0 0 0 $shadow-large rgba(255, 255, 255, .2);
 	color: color(text);
 	margin: 0 auto;
 	min-height: 350px;
