--- a/views/playground/login/index.html.twig
+++ b/views/playground/login/index.html.twig
@@ -25,7 +25,7 @@
 					<span class="signin__info" role="alert" aria-atomic="true">Pulsar City Council</span>
 
 					<div class="signin__group">
-						<label for="username">Username (required)</label>
+						<label for="username">Username <span class="hide">required</span></label>
 						<input
 							autofocus
 							autocapitalize="off"
@@ -35,14 +35,13 @@
 							id="username"
 							name="username"
 							type="text"
-							placeholder="username"
 							autocomplete="off"
 							tabindex="0"
 						/>
 					</div>
 
 					<div class="signin__group">
-						<label for="password">Password (required)</label>
+						<label for="password">Password <span class="hide">required</span></label>
 						<input
 							autocapitalize="off"
 							autocomplete="off"
@@ -50,7 +49,6 @@
 							class="signin__input"
 							id="password"
 							name="password"
-							placeholder="password"
 							tabindex="0"
 							type="password"
 						/>
