Tweak padding of toolbar dropdown

--- a/stylesheets/_component.dropdowns.scss
+++ b/stylesheets/_component.dropdowns.scss
@@ -35,6 +35,10 @@
   .caret {
     border-top-color: color(primary, alt);
   }
+
+  &:focus .caret {
+    border-top-color: color(black);
+  }
 }
 
 // The dropdown menu (ul)
