--- a/stylesheets/_component.notifications.scss
+++ b/stylesheets/_component.notifications.scss
@@ -48,8 +48,17 @@
 
     // Disable default button is-active styles
     &.is-active {
-        background-color: initial;
-        color: initial;
+        background-color: color(white);
+        color: color(text);
+    }
+
+    &.is-active::after {
+        display: none;
+    }
+
+    &.is-active:hover {
+        background-color: color(base);
+        color: color(base, alt);
     }
 
     // the red dot indicator
